--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+ensayo/nuoct/analisis/4-secular/*.dat filter=lfs diff=lfs merge=lfs -text
 ensayo/nuoct/analisis/4-secular/ncorp13.dat filter=lfs diff=lfs merge=lfs -text
 ensayo/nuoct/analisis/4-secular/planet1.dat filter=lfs diff=lfs merge=lfs -text
 ensayo/nuoct/analisis/4-secular/planet2.dat filter=lfs diff=lfs merge=lfs -text
